--- a/yith-proteo/style.css
+++ b/yith-proteo/style.css
@@ -6,7 +6,7 @@ Author: YITH
 Author URI: https://yithemes.com
 Description: Proteo is a modern, fast and fully customizable WooCommerce theme. Designed and developed by YITH - a team of top developers of premium themes -  with a beautiful UI, a minimal design and an optimized code, is perfect for each kind of site or shop. With the Proteo Wizard you can import our demo content with just a few clicks - in less than 2 minutes! -  and easily customize it using the advanced front-end customizer. Proteo is the best solution if you want a complete WooCommerce theme that works perfectly also in mobile devices and start quickly to sell your products with WooCommerce without technical knowledge. Works perfectly with page builders like Elementor, Gutenberg & Visual composer. Key features: # WooCommerce Ready # Responsive with a perfect mobile design # Compatible with Elementor, Gutenberg, Visual Composer and others page builders # Translation Ready # Frontend customizer with hundred of options to customize header, footer, pages, typography, style, ecc.  # Google fonts support # Regularly updated and improved with new demos and advanced features # Support to all YITH plugins. Check all our Proteo demos: https://proteo.yithemes.com/
 
-Version: 1.9.6
+Version: 1.9.7
 License: GPLv2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: yith-proteo
@@ -12042,7 +12042,7 @@ a.compare.button {
   position: relative;
   display: inline-block;
 }
-.single-product div.product .summary.entry-summary a.compare:not(.button) {
+.single-product div.product .summary.entry-summary a.compare:not(.button, .checkbox) {
   padding-bottom: 40px;
   text-transform: uppercase;
   font-weight: 500;
@@ -12051,7 +12051,7 @@ a.compare.button {
   color: inherit;
   border-bottom: 1px solid #cccccc;
 }
-.single-product div.product .summary.entry-summary a.compare:not(.button):before {
+.single-product div.product .summary.entry-summary a.compare:not(.button, .checkbox):before {
   content: "\e88e";
   font-family: Linearicons-Free;
   display: inline-block;
@@ -12059,7 +12059,7 @@ a.compare.button {
   font-size: 2em;
   vertical-align: middle;
 }
-.single-product div.product .summary.entry-summary a.compare:not(.button):hover {
+.single-product div.product .summary.entry-summary a.compare:not(.button, .checkbox):hover {
   text-decoration: underline;
   color: var(--proteo-general_link_color, #448a85);
 }
@@ -12076,6 +12076,10 @@ ul.products li.product a.compare:not(.button) {
   font-weight: 600;
 }
 
+#yith-woocompare h2,
+.yith-woocompare-widget h2 {
+  line-height: 1.2;
+}
 #yith-woocompare .button,
 #yith-woocompare a.added_to_cart,
 #yith-woocompare a.compare-widget,
@@ -12084,20 +12088,15 @@ ul.products li.product a.compare:not(.button) {
 .yith-woocompare-widget a.added_to_cart,
 .yith-woocompare-widget a.compare-widget,
 .yith-woocompare-widget a.compare {
-  border-radius: 50px;
-  font-size: 0.875rem;
-  text-transform: uppercase;
   padding: 7px 14px;
   display: inline-block;
   margin-right: 0;
-  font-weight: 600;
 }
 #yith-woocompare .product-price,
 #yith-woocompare tr.price td,
 .yith-woocompare-widget .product-price,
 .yith-woocompare-widget tr.price td {
   color: #1f1f1f;
-  font-size: 0.875rem;
   line-height: normal;
   font-weight: bold;
   margin-bottom: 5px;
@@ -12115,6 +12114,16 @@ ul.products li.product a.compare:not(.button) {
 .yith-woocompare-widget .product-price ins,
 .yith-woocompare-widget tr.price td ins {
   background: none;
+}
+#yith-woocompare a.button.yith_woocompare_clear,
+.yith-woocompare-widget a.button.yith_woocompare_clear {
+  color: #fff;
+}
+#yith-woocompare #yith-woocompare-cat-nav h3,
+.yith-woocompare-widget #yith-woocompare-cat-nav h3 {
+  font-size: 22px;
+  margin-bottom: 35px;
+  color: #434343;
 }
 
 #yith-woocompare-related .related-products li {
@@ -12149,6 +12158,11 @@ ul.products li.product a.compare:not(.button) {
   padding: 0;
   display: block;
   color: var(--proteo-general_link_color, #448a85);
+}
+
+#yith-woocompare-preview-bar .button {
+  margin: 0;
+  text-align: center;
 }
 
 .entry-content .ywgc_enter_code {
