--- a/yith-proteo/style.css
+++ b/yith-proteo/style.css
@@ -6,7 +6,7 @@ Author: YITH
 Author URI: https://yithemes.com
 Description: Proteo is a modern, fast and fully customizable WooCommerce theme. Designed and developed by YITH - a team of top developers of premium themes -  with a beautiful UI, a minimal design and an optimized code, is perfect for each kind of site or shop. With the Proteo Wizard you can import our demo content with just a few clicks - in less than 2 minutes! -  and easily customize it using the advanced front-end customizer. Proteo is the best solution if you want a complete WooCommerce theme that works perfectly also in mobile devices and start quickly to sell your products with WooCommerce without technical knowledge. Works perfectly with page builders like Elementor, Gutenberg & Visual composer. Key features: # WooCommerce Ready # Responsive with a perfect mobile design # Compatible with Elementor, Gutenberg, Visual Composer and others page builders # Translation Ready # Frontend customizer with hundred of options to customize header, footer, pages, typography, style, ecc.  # Google fonts support # Regularly updated and improved with new demos and advanced features # Support to all YITH plugins. Check all our Proteo demos: https://proteo.yithemes.com/
 
-Version: 1.9.7
+Version: 1.9.8
 License: GPLv2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: yith-proteo
@@ -5110,6 +5110,7 @@ span.checkboxbutton.checked:before {
   background-repeat: no-repeat !important;
   background-position: center !important;
   border-color: var(--proteo-main_color_shade, #448a85);
+  background-size: 60%;
 }
 
 /* Default radio buttons */
@@ -9560,6 +9561,55 @@ Prices
 }
 
 /**
+Show Password input
+**/
+.woocommerce form .password-input, .woocommerce-page form .password-input {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+}
+
+.woocommerce form .show-password-input, .woocommerce-page form .show-password-input {
+  background-color: transparent;
+  border-radius: 0;
+  border: 0;
+  color: var(--proteo-base_font_color, #404040);
+  cursor: pointer;
+  font-size: inherit;
+  line-height: inherit;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  right: 0.7em;
+  text-decoration: none;
+  top: 50%;
+  transform: translateY(-50%);
+  -moz-osx-font-smoothing: inherit;
+  -webkit-appearance: none;
+  -webkit-font-smoothing: inherit;
+}
+.woocommerce form .show-password-input::after, .woocommerce-page form .show-password-input::after {
+  font-family: "simple-line-icons";
+  speak: never;
+  font-weight: 400;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  margin-left: 0.618em;
+  content: "\e087";
+  text-decoration: none;
+  margin-left: 0;
+  margin-top: -2px;
+  vertical-align: middle;
+  display: inline-block;
+}
+.woocommerce form .show-password-input.display-password::after, .woocommerce-page form .show-password-input.display-password::after {
+  opacity: 0.5;
+}
+
+/**
  * WooCommerce widgets
  */
 /**
@@ -12064,11 +12114,13 @@ a.compare.button {
   color: var(--proteo-general_link_color, #448a85);
 }
 
-ul.products li.product a.compare {
+ul.products li.product a.compare,
+ul.wc-block-grid__products li.wc-block-grid__product a.compare {
   display: inline-block;
   margin-right: 0;
 }
-ul.products li.product a.compare:not(.button) {
+ul.products li.product a.compare:not(.button),
+ul.wc-block-grid__products li.wc-block-grid__product a.compare:not(.button) {
   font-size: 0.875rem;
   padding: 5px 0;
   transition: all ease 0.3s;
